# deal-finder

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  kleinanzeigen.py  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
