[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-finder"
version = "0.1.0"
description = "Minimal Kleinanzeigen deal finder with email + ntfy notifications."
requires-python = ">=3.10"
authors = [
  { name = "Matthias" },
]
dependencies = [
  "requests",
  "beautifulsoup4",
]

[project.scripts]
check-kleinanzeigen-cpus = "deal_finder.kleinanzeigen:main"
